--- a/buildscripts/resmokeconfig/suites/buildscripts_test.yml
+++ b/buildscripts/resmokeconfig/suites/buildscripts_test.yml
@@ -4,12 +4,7 @@ selector:
   roots:
   - buildscripts/tests/**/test_*.py
   - buildscripts/idl/tests/**/test_*.py
-  exclude_files:
-  - buildscripts/tests/resmokelib/test_selector.py # Test assumes POSIX path.
-  - buildscripts/tests/resmokelib/utils/test_archival.py # Requires boto3.
-  - buildscripts/tests/test_aws_ec2.py # Requires boto3.
-  - buildscripts/tests/test_remote_operations.py # Requires ssh to be enabled locally.
-  - buildscripts/tests/resmokelib/end2end/**/test_*.py # Requires compile task. Test run in resmoke_end2end_tests.yml instead.
+  exclude_files: []
 
 
 executor: {}
