--- a/buildscripts/resmokeconfig/suites/buildscripts_test.yml
+++ b/buildscripts/resmokeconfig/suites/buildscripts_test.yml
@@ -5,6 +5,7 @@ selector:
   - buildscripts/tests/**/test_*.py
   - buildscripts/idl/tests/**/test_*.py
   exclude_files:
+  # These tests are also @unittest.skip'ed. SERVER-48969 tracks re-enabling them.
   - buildscripts/tests/resmokelib/test_selector.py # Test assumes POSIX path.
   - buildscripts/tests/resmokelib/utils/test_archival.py # Requires boto3.
   - buildscripts/tests/test_aws_ec2.py # Requires boto3.
